Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTIEBRNET.VB

        Public Declare Function BTIEBR_BlkSWDWr Lib "BTIEBR64.DLL" Alias "BTIEBR_BlkSWDWr" (ByVal swdval As UInt16, ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BlkWipe Lib "BTIEBR64.DLL" Alias "BTIEBR_BlkWipe" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BlkWr Lib "BTIEBR64.DLL" Alias "BTIEBR_BlkWr" (ByVal block As UInt16(), ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ChConfig Lib "BTIEBR64.DLL" Alias "BTIEBR_ChConfig" (ByVal enableflag As Int32, ByVal typeval As Int32, ByVal rtlink As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ChIsRunning Lib "BTIEBR64.DLL" Alias "BTIEBR_ChIsRunning" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_CmdAddr Lib "BTIEBR64.DLL" Alias "BTIEBR_CmdAddr" (ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_CmdAlloc Lib "BTIEBR64.DLL" Alias "BTIEBR_CmdAlloc" (ByVal count As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_CmdAllocEx Lib "BTIEBR64.DLL" Alias "BTIEBR_CmdAllocEx" (ByVal configval As UInt32, ByVal count As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_CmdBaseRd Lib "BTIEBR64.DLL" Alias "BTIEBR_CmdBaseRd" (ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Sub BTIEBR_CmdBaseWr Lib "BTIEBR64.DLL" Alias "BTIEBR_CmdBaseWr" (ByVal addrval As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTIEBR_CmdClear Lib "BTIEBR64.DLL" Alias "BTIEBR_CmdClear" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_CmdCountRd Lib "BTIEBR64.DLL" Alias "BTIEBR_CmdCountRd" (ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTIEBR_CmdCountWr Lib "BTIEBR64.DLL" Alias "BTIEBR_CmdCountWr" (ByVal countval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTIEBR_CmdCtrlRd Lib "BTIEBR64.DLL" Alias "BTIEBR_CmdCtrlRd" (ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTIEBR_CmdCtrlWr Lib "BTIEBR64.DLL" Alias "BTIEBR_CmdCtrlWr" (ByVal ctrlval As UInt16, ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTIEBR_CmdCurrRd Lib "BTIEBR64.DLL" Alias "BTIEBR_CmdCurrRd" (ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTIEBR_CmdCurrWr Lib "BTIEBR64.DLL" Alias "BTIEBR_CmdCurrWr" (ByVal addrval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Sub BTIEBR_CmdInit Lib "BTIEBR64.DLL" Alias "BTIEBR_CmdInit" (ByVal opcode As UInt16, ByVal block As UInt16())
        Public Declare Function BTIEBR_CmdInsert Lib "BTIEBR64.DLL" Alias "BTIEBR_CmdInsert" (ByVal block As UInt16(), ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_CmdRd Lib "BTIEBR64.DLL" Alias "BTIEBR_CmdRd" (ByVal block As UInt16(), ByVal addrval As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTIEBR_CmdRestart Lib "BTIEBR64.DLL" Alias "BTIEBR_CmdRestart" (ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Sub BTIEBR_CmdStackClr Lib "BTIEBR64.DLL" Alias "BTIEBR_CmdStackClr" (ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTIEBR_CmdStartRd Lib "BTIEBR64.DLL" Alias "BTIEBR_CmdStartRd" (ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTIEBR_CmdStartWr Lib "BTIEBR64.DLL" Alias "BTIEBR_CmdStartWr" (ByVal addrval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTIEBR_CmdTotalRd Lib "BTIEBR64.DLL" Alias "BTIEBR_CmdTotalRd" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTIEBR_CmdTotalWr Lib "BTIEBR64.DLL" Alias "BTIEBR_CmdTotalWr" (ByVal countval As Int32, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTIEBR_CmdWr Lib "BTIEBR64.DLL" Alias "BTIEBR_CmdWr" (ByVal block As UInt16(), ByVal addrval As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_DescAddr Lib "BTIEBR64.DLL" Alias "BTIEBR_DescAddr" (ByVal mcflag As Int32, ByVal rtlink As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_DescAlloc Lib "BTIEBR64.DLL" Alias "BTIEBR_DescAlloc" (ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_DescConfig Lib "BTIEBR64.DLL" Alias "BTIEBR_DescConfig" (ByVal configval As UInt32, ByVal mcflag As Int32, ByVal rtlink As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_DescConfigAll Lib "BTIEBR64.DLL" Alias "BTIEBR_DescConfigAll" (ByVal configval As UInt32, ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_DescOptRd Lib "BTIEBR64.DLL" Alias "BTIEBR_DescOptRd" (ByVal mcflag As Int32, ByVal rtlink As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTIEBR_DescOptWr Lib "BTIEBR64.DLL" Alias "BTIEBR_DescOptWr" (ByVal descopt As UInt16, ByVal mcflag As Int32, ByVal rtlink As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTIEBR_DescPtrRd Lib "BTIEBR64.DLL" Alias "BTIEBR_DescPtrRd" (ByVal mcflag As Int32, ByVal rtlink As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_DescPtrWr Lib "BTIEBR64.DLL" Alias "BTIEBR_DescPtrWr" (ByVal msgaddr As UInt32, ByVal mcflag As Int32, ByVal rtlink As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_DescRd Lib "BTIEBR64.DLL" Alias "BTIEBR_DescRd" (ByVal mcflag As Int32, ByVal rtlink As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal desc As UInt16(), ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_DescWr Lib "BTIEBR64.DLL" Alias "BTIEBR_DescWr" (ByVal mcflag As Int32, ByVal rtlink As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal desc As UInt16(), ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_DllUsageCount Lib "BTIEBR64.DLL" Alias "BTIEBR_DllUsageCount" () As Int32
        Public Declare Function BTIEBR_ErrorIsTaggedBC Lib "BTIEBR64.DLL" Alias "BTIEBR_ErrorIsTaggedBC" (ByVal msgaddr As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ErrorIsTaggedRT Lib "BTIEBR64.DLL" Alias "BTIEBR_ErrorIsTaggedRT" (ByVal mcflag As Int32, ByVal rtlink As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ErrorResponse Lib "BTIEBR64.DLL" Alias "BTIEBR_ErrorResponse" (ByVal responseval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTIEBR_ErrorSync Lib "BTIEBR64.DLL" Alias "BTIEBR_ErrorSync" (ByVal value As Int32, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTIEBR_ErrorTimeout Lib "BTIEBR64.DLL" Alias "BTIEBR_ErrorTimeout" (ByVal timeoutval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_HostComm Lib "BTIEBR64.DLL" Alias "BTIEBR_HostComm" (ByVal lpparam As IntPtr, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_IsChan Lib "BTIEBR64.DLL" Alias "BTIEBR_IsChan" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_LHubConfig Lib "BTIEBR64.DLL" Alias "BTIEBR_LHubConfig" (ByVal configval As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_LHubPortExists Lib "BTIEBR64.DLL" Alias "BTIEBR_LHubPortExists" (ByVal portnum As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_LHubPortGetCount Lib "BTIEBR64.DLL" Alias "BTIEBR_LHubPortGetCount" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_LHubPortGetRTLink Lib "BTIEBR64.DLL" Alias "BTIEBR_LHubPortGetRTLink" (ByVal portnum As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_LHubPortIsAvail Lib "BTIEBR64.DLL" Alias "BTIEBR_LHubPortIsAvail" (ByVal portnum As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_LHubPortIsAvailMask Lib "BTIEBR64.DLL" Alias "BTIEBR_LHubPortIsAvailMask" (ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_LHubPortSetRTLink Lib "BTIEBR64.DLL" Alias "BTIEBR_LHubPortSetRTLink" (ByVal rtlink As Int32, ByVal portnum As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_LHubRTLinkGetPort Lib "BTIEBR64.DLL" Alias "BTIEBR_LHubRTLinkGetPort" (ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ListAddr Lib "BTIEBR64.DLL" Alias "BTIEBR_ListAddr" (ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_ListAddrEx Lib "BTIEBR64.DLL" Alias "BTIEBR_ListAddrEx" (ByVal index As Int32, ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_ListBlockRdEx Lib "BTIEBR64.DLL" Alias "BTIEBR_ListBlockRdEx" (ByVal buf As UInt16(), ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_ListBlockWrEx Lib "BTIEBR64.DLL" Alias "BTIEBR_ListBlockWrEx" (ByVal buf As UInt16(), ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_ListClear Lib "BTIEBR64.DLL" Alias "BTIEBR_ListClear" (ByVal listaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ListConfig Lib "BTIEBR64.DLL" Alias "BTIEBR_ListConfig" (ByVal configval As UInt32, ByVal count As Int32, ByVal skipval As UInt16, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_ListConfigEx Lib "BTIEBR64.DLL" Alias "BTIEBR_ListConfigEx" (ByVal configval As UInt32, ByVal count As Int32, ByVal skipval As UInt16, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_ListDataRdEx Lib "BTIEBR64.DLL" Alias "BTIEBR_ListDataRdEx" (ByVal buf As UInt16(), ByVal count As Int32, ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ListDataWrEx Lib "BTIEBR64.DLL" Alias "BTIEBR_ListDataWrEx" (ByVal buf As UInt16(), ByVal count As Int32, ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ListInit Lib "BTIEBR64.DLL" Alias "BTIEBR_ListInit" (ByVal listaddr As UInt32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
